service/tests/models/snapshots/user_roles/can_assign_role_to_user@user_roles.snap
---
source: tests/models/user_roles.rs
expression: result
---
Ok(
    UserRole {
        id: ID,
        pid: PID,
        user_id: ID,
        role_id: ID,
        created_at: DATE,
        updated_at: DATE,
    },
)
