service/tests/models/snapshots/user_roles/can_find_customer_role_by_user@user_roles.snap
---
source: tests/models/user_roles.rs
expression: result
---
Ok(
    [
        UserRole {
            id: 105,
            pid: dfae4123-8788-40e7-9fb7-60f66300c3d2,
            user_id: 22,
            role_id: 22,
            created_at: 2026-06-21T09:00:00+00:00,
            updated_at: 2026-06-21T09:05:00+00:00,
        },
    ],
)
