service/tests/models/snapshots/user_roles/can_find_user_roles_by_user@user_roles.snap
---
source: tests/models/user_roles.rs
expression: result
---
Ok(
    [
        UserRole {
            id: 104,
            pid: 8b5de739-97d4-4941-bd7d-f0575433ffa9,
            user_id: 11,
            role_id: 44,
            created_at: 2026-06-21T09:00:00+00:00,
            updated_at: 2026-06-21T09:05:00+00:00,
        },
    ],
)
