service/tests/models/snapshots/user_roles/can_revoke_role_from_user@user_roles.snap
---
source: tests/models/user_roles.rs
expression: "(revoked, remaining)"
---
(
    Ok(
        UserRole {
            id: ID,
            pid: PID,
            user_id: ID,
            role_id: ID,
            created_at: DATE,
            updated_at: DATE,
        },
    ),
    Ok(
        [],
    ),
)
