service/tests/models/snapshots/user_roles/cannot_assign_role_when_user_already_has_role@user_roles.snap
---
source: tests/models/user_roles.rs
expression: result
---
Err(
    EntityAlreadyExists(
        "User has already been assigned that role",
    ),
)
