service/tests/models/snapshots/user_roles/cannot_revoke_role_that_is_not_assigned@user_roles.snap
---
source: tests/models/user_roles.rs
expression: "(revoked, remaining)"
---
(
    Err(
        EntityNotFound,
    ),
    Ok(
        [
            UserRole {
                id: ID,
                pid: PID,
                user_id: ID,
                role_id: ID,
                created_at: DATE,
                updated_at: DATE,
            },
        ],
    ),
)
